--- a/Indoor/style.css
+++ b/Indoor/style.css
@@ -1,8 +1,8 @@
 :root {
   --yellow-1: #f39c12;
-  --yellow-2: #f39500;
+  --yellow-2: #ff9c00;
 
-  --black-1: rgba(0, 0, 0, 0.85);
+  --black-1: rgba(0, 0, 0, 0.8);
   --black-2: rgba(0, 0, 0, 0.65);
   --black-3: rgba(0, 0, 0, 0.5);
 
@@ -22,7 +22,6 @@ html {
 }
 
 body {
-  font-family: Ubuntu, "arial", sans-serif;
   font-family: Roboto, "arial", sans-serif;
   color: var(--black-1);
   font-size: 1.6rem;
@@ -31,6 +30,19 @@ body {
 }
 
 /* ELEMENTS GLOBAL DEFAULT STYLES */
+a:link,
+a:visited {
+  text-decoration: none;
+  color: var(--black-2);
+  text-transform: uppercase;
+  transition: color 0.5s;
+}
+
+a:hover,
+a:active {
+  color: var(--black-1);
+}
+
 button {
   padding: 1.5rem 2.5rem;
   color: var(--black-1);
@@ -43,6 +55,7 @@ button {
 .container {
   width: 100%;
   height: 100vh;
+  display: flex;
 }
 
 /* PRODUCT SECTION*/
@@ -82,6 +95,8 @@ button {
 .navigation__btn {
   background-color: var(--yellow-1);
   color: var(--white);
+  font-size: 1.1rem;
+  text-transform: uppercase;
   cursor: pointer;
   transition: transform 1s;
 }
@@ -97,4 +112,72 @@ button {
 .navigation__btn--next {
   position: relative;
   left: -0.3rem;
+}
+
+/* Content */
+.content {
+  width: 50%;
+  padding: 3rem 6rem;
+  overflow: hidden;
+}
+
+.menu-bar {
+  margin-bottom: 14rem;
+}
+
+.menu {
+  display: flex;
+  justify-content: flex-start;
+  list-style-type: none;
+}
+
+.menu__item {
+  padding-right: 6.5rem;
+}
+
+.menu__item a:hover {
+  color: var(--black-1);
+}
+
+.menu__item .active {
+  color: var(--black-1);
+}
+
+.menu__item a {
+  color: var(--black-3);
+}
+
+.title {
+  font-family: Ubuntu, "arial", sans-serif;
+  font-size: 4.7rem;
+  color: var(--black-1);
+  line-height: 1.2;
+  margin-bottom: 3rem;
+}
+
+.sub-title {
+  font-size: 1.6rem;
+  color: var(--black-3);
+  line-height: 1.6;
+  margin-bottom: 4rem;
+}
+.sub-title span {
+  display: block;
+}
+
+.cta__btn:link,
+.cta__btn:visited {
+  background-color: var(--yellow-1);
+  padding: 1.5rem 2.5rem;
+  color: var(--white);
+  font-size: 1.1rem;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: background 0.5s;
+}
+
+.cta__btn:hover,
+.cta__btn:active {
+  background: var(--yellow-2);
 }
