--- a/Prepaid/style.css
+++ b/Prepaid/style.css
@@ -32,7 +32,13 @@ body {
 
 .container {
   margin: 0 auto;
-  max-width: 40rem;
+  overflow: hidden;
+}
+
+@media only screen and (min-width: 768px) {
+  .container {
+    min-width: 76.8rem;
+  }
 }
 
 /* Section */
@@ -59,6 +65,7 @@ button {
 /* Link */
 a:link,
 a:visited {
+  font-size: 2rem;
   text-decoration: none;
   display: inline-block;
   color: var(--font-color-white-1);
@@ -67,6 +74,26 @@ a:visited {
 /* Heading */
 h1 {
   font-size: 4rem;
+  line-height: 4.8rem;
+}
+
+/* blockquote */
+blockquote {
+  font-size: 2rem;
+}
+
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 4.8rem;
+    line-height: 5.6rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  h1 {
+    font-size: 5.6rem;
+    line-height: 6.4rem;
+  }
 }
 
 h2 {
@@ -75,20 +102,35 @@ h2 {
 
 /* Paragraph */
 p {
-  font-size: 1.6rem;
-  line-height: 2.4rem;
+  font-size: 2rem;
+  line-height: 2.8rem;
 }
 
 /* Section Default styles */
 .section__title {
+  font-size: 3.2rem;
   margin-bottom: 1.6rem;
   text-align: center;
   line-height: 100%;
 }
 
+@media only screen and (min-width: 768px) {
+  .section__title {
+    width: 52rem;
+    margin: 0 auto 1.6rem auto;
+  }
+}
+
 .section__subtitle {
   text-align: center;
   margin-bottom: 4.8rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .section__subtitle {
+    width: 52rem;
+    margin: 0 auto 4.8rem auto;
+  }
 }
 
 /* Background */
@@ -115,6 +157,22 @@ p {
   margin-bottom: 4.8rem;
 }
 
+@media only screen and (min-width: 768px) {
+  .nav-bar {
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .nav-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 12rem;
+  }
+}
+
 .nav-bar__logo-link:link,
 .nav-bar__logo-link:visited {
   position: absolute;
@@ -123,6 +181,13 @@ p {
   transform: translate(-50%, -50%);
   width: 13.5rem;
   height: 4rem;
+}
+@media only screen and (min-width: 1024px) {
+  .nav-bar__logo-link:link,
+  .nav-bar__logo-link:visited {
+    position: static;
+    transform: translate(0);
+  }
 }
 
 .nav-bar__logo {
@@ -137,6 +202,11 @@ p {
   width: 5.6rem;
   border-radius: 0.6rem;
 }
+@media only screen and (min-width: 1024px) {
+  .nav-bar__menu-btn {
+    display: none;
+  }
+}
 
 .nav-bar__btn-image {
   width: 3.2rem;
@@ -147,8 +217,25 @@ p {
   display: none;
   position: absolute;
   width: 100%;
-  margin-top: 0.8rem;
+  top: 6rem;
+  /* margin-top: 0.8rem; */
   border-radius: 0.6rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .menu {
+    width: 40%;
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .menu {
+    position: relative;
+    top: 0;
+    display: block;
+    width: auto;
+  }
 }
 
 .menu.active {
@@ -156,17 +243,56 @@ p {
   background-color: var(--font-color-white-1);
 }
 
+@media only screen and (min-width: 1024px) {
+  .menu.active {
+    background-color: transparent;
+  }
+}
+
 .menu ul {
   list-style-type: none;
-  font-size: 2rem;
+}
+
+@media only screen and (min-width: 1024px) {
+  .menu ul {
+  }
 }
 
 .menu li {
   border-bottom: 1px solid #334a8a;
 }
 
+@media only screen and (min-width: 1024px) {
+  .menu li {
+    border-bottom: none;
+    display: inline-block;
+    margin-right: 4rem;
+  }
+}
+
 .menu li:last-child {
   border-bottom: none;
+}
+
+@media only screen and (min-width: 1024px) {
+  .menu li:last-child {
+    margin: 0;
+  }
+
+  .menu li:last-child a {
+    height: 4.8rem;
+    width: 12rem;
+    border: 1px solid #fff;
+    border-radius: 0.4rem;
+    text-align: center;
+    line-height: calc(4.7rem - 2px);
+    transition: border 0.3s;
+  }
+
+  .menu li:last-child a:hover,
+  .menu li:last-child a:active {
+    border-color: var(--color-red-dark);
+  }
 }
 
 .menu a:link,
@@ -178,6 +304,14 @@ p {
   display: inline-block;
 }
 
+@media only screen and (min-width: 1024px) {
+  .menu a:link,
+  .menu a:visited {
+    color: var(--font-color-white-1);
+    padding: 0;
+  }
+}
+
 .menu a:hover,
 .menu a:active {
   color: var(--color-red-dark);
@@ -187,19 +321,76 @@ p {
 header {
   padding-top: 1.6rem;
 }
+
+@media only screen and (min-width: 768px) {
+  header {
+    background-image: url(assets/img/hero-image.svg);
+    background-repeat: no-repeat;
+    background-position: 120% center;
+    background-size: auto 35rem;
+    padding-bottom: 8rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  header {
+    background-size: auto 50rem;
+    background-position: 120% center;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  header {
+    background-size: auto 50rem;
+    background-position: 100% center;
+  }
+}
+
 .hero {
 }
 
+@media only screen and (min-width: 768px) {
+  .hero {
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .hero {
+    margin-bottom: 10rem;
+  }
+}
+
+.hero-text {
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-text {
+    width: 58.31%;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .hero-text {
+    width: 45%;
+  }
+}
+
 .hero__title {
-  line-height: 1;
-  margin-bottom: 2.4rem;
+  margin-bottom: 1.6rem;
   width: 100%;
 }
 
 .hero__subtitle {
-  line-height: 2.4rem;
   margin-bottom: 3.2rem;
   width: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .hero__subtitle {
+    width: 80%;
+  }
 }
 
 .hero__link:link,
@@ -210,9 +401,14 @@ header {
   background-color: var(--color-red-dark);
   border-radius: 0.6rem;
   width: 17.8rem;
-  height: 5.2rem;
-  margin-bottom: 4.8rem;
   transition: background 0.3s;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero__link:link,
+  .hero__link:visited {
+    margin-bottom: 0.8rem;
+  }
 }
 
 .hero__link:hover,
@@ -223,6 +419,13 @@ header {
 .hero-img-container {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+  .hero-img-container {
+    display: none;
+  }
 }
 
 .hero__img {
@@ -235,9 +438,27 @@ header {
 .features {
 }
 
+.features-items {
+  display: block;
+}
+
+.features-items .features__container:last-child {
+  margin-bottom: 0;
+}
+
+@media only screen and (min-width: 768px) {
+  .features-items {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .features-items .features__container:nth-child(1) {
+    margin-bottom: 8rem;
+  }
+}
+
 .features__link:link,
 .features__link:visited {
-  margin-bottom: 4.8rem;
 }
 
 .features__link:hover,
@@ -249,6 +470,23 @@ header {
 
 .features__container {
   width: 100%;
+  margin-bottom: 4.8rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .features__container {
+    width: 50%;
+    padding-right: 1.2rem;
+    padding-left: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .features__container {
+    width: 25%;
+    padding-right: 1.2rem;
+    padding-left: 1.2rem;
+  }
 }
 
 .features__icon-container {
@@ -285,9 +523,43 @@ header {
   color: var(--font-color-white-1);
 }
 
+@media only screen and (min-width: 1024px) {
+  .registration {
+    background-image: url(assets/img/step-image.svg);
+    background-repeat: no-repeat;
+    background-position: 10% 75%;
+    background-size: auto 40rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .registration {
+    background-position: 10% 80%;
+  }
+}
+
 .registration .section__title,
 .registration .section__subtitle {
   color: var(--font-color-white-1);
+}
+
+.step-items {
+}
+
+@media only screen and (min-width: 768px) {
+  .step-items {
+    width: 67%;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .step-items {
+    position: relative;
+    width: 45%;
+    left: 50%;
+    margin: 0;
+  }
 }
 
 .step-container {
@@ -317,15 +589,13 @@ header {
 }
 
 .step-content {
-  width: 75%;
+  width: 100%;
 }
 
 .step-content__title {
-  font-size: 2.4rem;
   margin-bottom: 1.6rem;
 }
 .step-content__subtitle {
-  font-size: 1.6rem;
   line-height: 2.4rem;
 }
 
@@ -343,6 +613,14 @@ header {
   padding: 4rem 2.4rem;
   background-color: var(--font-color-white-1);
   box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (min-width: 768px) {
+  .customer {
+    width: 90%;
+    margin: 0 auto;
+    padding: 5.6rem 6.4rem;
+  }
 }
 
 .feedback-icon {
@@ -368,17 +646,15 @@ header {
 
 .customer__name {
   font-size: 2.4rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 0.4rem;
 }
 
 .customer__position {
-  font-size: 1.6rem;
   color: var(--color-blue-dark);
-  margin-bottom: 1.6rem;
+  margin-bottom: 2.4rem;
 }
 
 .customer__message {
-  font-size: 1.6rem;
   color: var(--font-color-black-3);
 }
 
@@ -388,8 +664,27 @@ footer {
   width: 100%;
 }
 
+@media only screen and (min-width: 1024px) {
+  footer {
+    display: flex;
+  }
+}
+
 .about {
   margin-bottom: 4rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .about {
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .about {
+    width: 33%;
+  }
 }
 
 .about__icon {
@@ -398,6 +693,19 @@ footer {
 
 .about__mission {
   margin-bottom: 2.4rem;
+  width: 87%;
+}
+
+@media only screen and (min-width: 768px) {
+  .about__mission {
+    width: 48%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .about__mission {
+    width: 100%;
+  }
 }
 
 .social-media {
@@ -415,8 +723,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.6rem;
-  margin-right: 2.4rem;
+  margin-right: 0.8rem;
   transition: color 0.3s;
 }
 
@@ -432,10 +739,37 @@ footer {
   flex-wrap: wrap;
 }
 
+@media only screen and (min-width: 768px) {
+  .navigations {
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .navigations {
+    width: 67%;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+  }
+}
+
 .footer__nav {
-  font-size: 1.6rem;
   width: 50%;
   padding-right: 1.6rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer__nav {
+    width: 25%;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .footer__nav {
+    width: 100%;
+  }
 }
 
 .footer__nav:first-of-type {
@@ -462,7 +796,7 @@ footer {
 }
 
 .footer__nav ul li:first-child {
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin-bottom: 1.6rem;
   font-weight: 400;
 }
