Change color scheme

--- a/Prepaid/style.css
+++ b/Prepaid/style.css
@@ -1,14 +1,15 @@
 :root {
-  --font-color-black-1: rgba(0, 0, 0, 0.8);
-  --font-color-black-2: rgba(0, 0, 0, 0.65);
-  --font-color-black-3: rgba(0, 0, 0, 0.5);
+  --font-color-1: #0c193d;
+  --font-color-2: #959fc1;
+  --font-color-3: #838ca5;
+  --font-color-4: #757c8e;
 
   --font-color-white-1: rgba(255, 255, 255, 1);
 
-  --color-blue-dark: #3a539b;
-  --color-blue-light: #f7faff;
+  --color-blue-dark: #d9e4ff;
+  --color-blue-light: #ffffff;
 
-  --color-red-dark: #9b3a53;
+  --color-red-dark: #bc223f;
 }
 *,
 *::before,
@@ -25,7 +26,7 @@ html {
 
 body {
   font-family: "Roboto", Arial, sans-serif;
-  color: var(--font-color-black-1);
+  color: var(--font-color-1);
   line-height: 1.5;
   font-weight: 300;
 }
@@ -59,7 +60,7 @@ button {
   outline: none;
   border: none;
   cursor: pointer;
-  background-color: var(--font-color-white-1);
+  background-color: #213cbf;
 }
 
 /* Link */
@@ -68,7 +69,7 @@ a:visited {
   font-size: 2rem;
   text-decoration: none;
   display: inline-block;
-  color: var(--font-color-white-1);
+  color: var(--font-color-1);
 }
 
 /* Heading */
@@ -112,6 +113,7 @@ p {
   margin-bottom: 1.6rem;
   text-align: center;
   line-height: 100%;
+  color: var(--font-color-1);
 }
 
 @media only screen and (min-width: 768px) {
@@ -124,6 +126,7 @@ p {
 .section__subtitle {
   text-align: center;
   margin-bottom: 4.8rem;
+  color: var(--font-color-3);
 }
 
 @media only screen and (min-width: 768px) {
@@ -136,19 +139,10 @@ p {
 /* Background */
 .bg-dark {
   background-color: var(--color-blue-dark);
-  color: var(--font-color-white-1);
 }
 
 .bg-light {
   background-color: var(--color-blue-light);
-}
-
-.bg-light .section__title {
-  color: var(--color-blue-dark);
-}
-
-.bg-light .section__subtitle {
-  color: var(--font-color-black-3);
 }
 
 /* Header */
@@ -201,6 +195,7 @@ p {
   height: 5.6rem;
   width: 5.6rem;
   border-radius: 0.6rem;
+  background-color: #fff;
 }
 @media only screen and (min-width: 1024px) {
   .nav-bar__menu-btn {
@@ -282,7 +277,8 @@ p {
   .menu li:last-child a {
     height: 4.8rem;
     width: 12rem;
-    border: 1px solid #fff;
+    background-color: #229362;
+    color: #d9e4ff;
     border-radius: 0.4rem;
     text-align: center;
     line-height: calc(4.7rem - 2px);
@@ -291,13 +287,12 @@ p {
 
   .menu li:last-child a:hover,
   .menu li:last-child a:active {
-    border-color: var(--color-red-dark);
   }
 }
 
 .menu a:link,
 .menu a:visited {
-  color: var(--color-blue-dark);
+  color: var(--font-color-1);
   transition: color 0.3s;
   width: 100%;
   padding: 1.6rem;
@@ -307,7 +302,6 @@ p {
 @media only screen and (min-width: 1024px) {
   .menu a:link,
   .menu a:visited {
-    color: var(--font-color-white-1);
     padding: 0;
   }
 }
@@ -384,6 +378,7 @@ header {
 }
 
 .hero__subtitle {
+  color: var(--font-color-2);
   margin-bottom: 3.2rem;
   width: 100%;
 }
@@ -398,7 +393,8 @@ header {
   font-size: 1.6rem;
   line-height: 5.2rem;
   text-align: center;
-  background-color: var(--color-red-dark);
+  background-color: #213cbf;
+  color: #d9e4ff;
   border-radius: 0.6rem;
   width: 17.8rem;
   transition: background 0.3s;
@@ -413,7 +409,7 @@ header {
 
 .hero__link:hover,
 .hero__link:active {
-  background-color: #9b2745;
+  background-color: #0031ba;
 }
 
 .hero-img-container {
@@ -505,9 +501,21 @@ header {
   fill: #fff;
 }
 
+.icon-1 {
+  background-color: #bc223f;
+}
+.icon-2 {
+  background-color: #24ba80;
+}
+.icon-3 {
+  background-color: #cc4705;
+}
+.icon-4 {
+  background-color: #1b92db;
+}
+
 .features__title {
   font-size: 2.4rem;
-  color: var(--font-color-black-1);
   margin-bottom: 1.6rem;
   line-height: 100%;
 }
@@ -515,12 +523,11 @@ header {
 .features__subtitle {
   font-size: 1.6rem;
   line-height: 3.2rem;
-  color: var(--font-color-black-3);
+  color: var(--font-color-3);
 }
 
 /* Registration */
 .registration {
-  color: var(--font-color-white-1);
 }
 
 @media only screen and (min-width: 1024px) {
@@ -577,6 +584,7 @@ header {
   height: 5.6rem;
   border-radius: 1111rem;
   background-color: var(--font-color-white-1);
+
   font-size: 2.4rem;
   display: flex;
   justify-content: center;
@@ -585,7 +593,7 @@ header {
 }
 
 .step-number span {
-  color: var(--color-blue-dark);
+  color: var(--font-color-1);
 }
 
 .step-content {
@@ -597,6 +605,7 @@ header {
 }
 .step-content__subtitle {
   line-height: 2.4rem;
+  color: var(--font-color-4);
 }
 
 /* Feedback */
@@ -630,7 +639,7 @@ header {
   top: -3.5rem;
   left: 50%;
   transform: translateX(-50%);
-  background-color: var(--color-blue-dark);
+  background-color: var(--font-color-1);
   border-radius: 1111rem;
   display: flex;
   justify-content: center;
@@ -647,20 +656,20 @@ header {
 .customer__name {
   font-size: 2.4rem;
   margin-bottom: 0.4rem;
+  color: var(--font-color-4);
 }
 
 .customer__position {
-  color: var(--color-blue-dark);
+  color: var(--font-color-4);
   margin-bottom: 2.4rem;
 }
 
 .customer__message {
-  color: var(--font-color-black-3);
+  color: var(--font-color-1);
 }
 
 /* Footer */
 footer {
-  color: var(--font-color-white-1);
   width: 100%;
 }
 
@@ -717,7 +726,7 @@ footer {
 .social-media__link:visited {
   width: 5rem;
   height: 5rem;
-  background-color: var(--font-color-white-1);
+  background-color: var(--font-color-1);
   border-radius: 1111rem;
   color: var(--color-blue-dark);
   display: flex;
@@ -786,7 +795,6 @@ footer {
 
 .footer__nav ul li a:link,
 .footer__nav ul li a:visited {
-  color: var(--font-color-white-1);
   transition: color 0.3s;
 }
 
